--- a/gallery.html
+++ b/gallery.html
@@ -63,11 +63,11 @@
     </nav>
 
     <div class="gallery">
-        <img src="image1.jpg" alt="Image 1">
-        <img src="image2.jpg" alt="Image 2">
-        <img src="image3.jpg" alt="Image 3">
-        <img src="image4.jpg" alt="Image 4">
-        <img src="image5.jpg" alt="Image 5">
+        <img src="img/1.jpg" alt="Image 1">
+        <img src="img/2.jpg" alt="Image 2">
+        <img src="img/3.jpg" alt="Image 3">
+        <img src="img/4.jpg" alt="Image 4">
+        <img src="img/5.jpg" alt="Image 5">
     </div>
 
 </body>
