--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     <div id="main-content" class="content">
         <img src="https://vcdn1-dulich.vnecdn.net/2022/07/18/ha-long-quang-ninh-jpeg-9862-1-1398-8445-1658113194.jpg?w=0&h=0&q=100&dpr=1&fit=crop&s=v3wvlCTR82KxbKRSn500dw" alt="My hometown">
+        <p>Description for Image 5: A close-up of beautiful flowers in bloom.</p>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFjLZcRo9cohDLSjAe6zuslM5ipk5CDQqgWA&s" alt="My fav food">
     </div>
 </body>
